--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1245,3 +1245,100 @@ label {
 }
 
 */
+
+
+
+#main-slider {
+  //width: 94%;
+  //max-width: 98%;
+  height: 370px;
+  position: relative;
+
+  h1 {
+    color: black;
+    font-family: 'Droid Sans', sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+  p {
+    font-family: 'Droid Sans', sans-serif;
+    font-size: 16px;
+    margin-bottom: 20px;
+    //max-height: 16px;
+    overflow: hidden;
+
+  }
+  img {
+    max-height: 100%;
+    max-width: 100%;
+    vertical-align: middle;
+    text-align: center;
+
+  }
+
+  .button-ver {
+    width: 54px;
+    height: 32px;
+    font-family: 'Droid Sans', sans-serif;
+    font-weight: bold;
+    background-color: rgb(0, 161, 72);
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    color: white;
+    padding: 5px;
+    align-items: center;
+    outline: none;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    -ms-transition: all .3s;
+    -o-transition: all .3s;
+    transition: all .3s;
+
+  }
+
+  .button-ver:hover {
+    cursor: pointer;
+    background-color: orange;
+  }
+
+  @media (min-width: 800px) {
+    //max-width: 50%;
+  }
+  @media (min-width: 1200px) {
+    //max-width: 600px;
+  }
+  //overflow: hidden;
+  .main-slider-proyecto {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 94%;
+    height: 98%;
+    margin: auto;
+    //background-color: #97f49d;
+    z-index: 0;
+    //padding: 10px;
+    //border: 2px solid white;
+    //-webkit-border-radius: 5px;
+    //-moz-border-radius: 5px;
+    //border-radius: 5px;
+    //pointer-events: none;
+
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    -ms-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    transition: all 0.4s;
+  }
+}
+.show-slider-proyecto {
+  opacity: 1 !important;
+  z-index: 0;
+  pointer-events: all !important;
+}
