--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1007,7 +1007,7 @@ label {
   width: 100%;
 }
 
-.slider_1, .slider_2, .slider_3, .slider_4 {
+.slider_1, .slider_2, .slider_3, .slider_4, .slider_5 {
   border: 1px solid #333;
   border-radius: 10px;
   cursor: pointer;
