--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -805,25 +805,31 @@ strong {
   margin-top: 30px;
   font-family: 'Oswald', sans-serif;
 }
+@media (min-width: 800px) {
+  /* line 813, ../sass/screen.scss */
+  .btn-action {
+    align-items: flex-end;
+  }
+}
 
-/* line 822, ../sass/screen.scss */
+/* line 825, ../sass/screen.scss */
 .back > a, .btn-action > a {
   margin-left: 10px;
   text-decoration: none;
   color: #000;
 }
 
-/* line 828, ../sass/screen.scss */
+/* line 831, ../sass/screen.scss */
 .btn-action > a {
   margin: 5px 0 0 0;
 }
 
-/* line 832, ../sass/screen.scss */
+/* line 835, ../sass/screen.scss */
 .back > a:hover, .btn-action > a:hover {
   color: #ce5f2d;
 }
 
-/* line 836, ../sass/screen.scss */
+/* line 839, ../sass/screen.scss */
 input[type="text"],
 input[type="password"],
 input[type="email"],
@@ -837,7 +843,7 @@ textarea {
   margin-left: 5px;
 }
 
-/* line 851, ../sass/screen.scss */
+/* line 854, ../sass/screen.scss */
 label {
   display: inline-block;
   max-width: 100%;
@@ -845,7 +851,7 @@ label {
   font-family: 'Oswald', sans-serif;
 }
 
-/* line 859, ../sass/screen.scss */
+/* line 862, ../sass/screen.scss */
 .form-control {
   display: block;
   width: 100%;
@@ -859,21 +865,21 @@ label {
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 
-/* line 876, ../sass/screen.scss */
+/* line 879, ../sass/screen.scss */
 .noticia-container {
   display: flex;
   flex-direction: row;
   margin-bottom: 15px;
 }
 
-/* line 882, ../sass/screen.scss */
+/* line 885, ../sass/screen.scss */
 .show-noticia-container {
   display: flex;
   flex-direction: column;
   margin-bottom: 15px;
 }
 
-/* line 888, ../sass/screen.scss */
+/* line 891, ../sass/screen.scss */
 .noticia-foto {
   /*
 border: 1px solid $color_6;
@@ -883,12 +889,12 @@ border-radius: 20px;
 */
 }
 
-/* line 897, ../sass/screen.scss */
+/* line 900, ../sass/screen.scss */
 .show-noticia-foto {
   margin: 30px 0 20px;
 }
 
-/* line 901, ../sass/screen.scss */
+/* line 904, ../sass/screen.scss */
 .noticia-foto > img {
   height: 100px;
   width: 100px;
@@ -900,7 +906,7 @@ border-radius: 20px;
   text-align: center;
 }
 
-/* line 912, ../sass/screen.scss */
+/* line 915, ../sass/screen.scss */
 .show-noticia-foto > img {
   height: 200px;
   width: 100%;
@@ -911,27 +917,27 @@ border-radius: 20px;
   text-align: center;
 }
 
-/* line 922, ../sass/screen.scss */
+/* line 925, ../sass/screen.scss */
 .noticia-info {
   margin-left: 20px;
 }
 
-/* line 926, ../sass/screen.scss */
+/* line 929, ../sass/screen.scss */
 .show-noticia-info {
   margin: 0 15px;
 }
 
-/* line 930, ../sass/screen.scss */
+/* line 933, ../sass/screen.scss */
 .noticia-info > p, .show-noticia-info > p {
   font-size: 12px;
 }
 
-/* line 934, ../sass/screen.scss */
+/* line 937, ../sass/screen.scss */
 .buscar {
   margin-top: 20px;
 }
 
-/* line 938, ../sass/screen.scss */
+/* line 941, ../sass/screen.scss */
 .buscar-control {
   width: 89%;
   background-image: none;
@@ -940,20 +946,25 @@ border-radius: 20px;
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 
-/* line 946, ../sass/screen.scss */
+/* line 949, ../sass/screen.scss */
 .arrow-contacto {
   display: none;
 }
 
+/* line 953, ../sass/screen.scss */
+.contacto-controls {
+  width: 100%;
+}
+
 @media (min-width: 800px) {
-  /* line 951, ../sass/screen.scss */
+  /* line 958, ../sass/screen.scss */
   .contacto-container {
-    flex-direction: row;
+    flex-direction: column;
     display: flex;
     width: 80%;
   }
 
-  /* line 956, ../sass/screen.scss */
+  /* line 964, ../sass/screen.scss */
   .arrow-contacto {
     border-left: 1px solid #000;
     margin-right: 5%;
@@ -962,15 +973,14 @@ border-radius: 20px;
     margin-left: 10%;
   }
 
-  /* line 963, ../sass/screen.scss */
+  /* line 971, ../sass/screen.scss */
   .contacto-controls {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
   }
 
-  /* line 969, ../sass/screen.scss */
+  /* line 977, ../sass/screen.scss */
   .contacto-controls > .controls {
     width: 100%;
     display: flex;
@@ -978,13 +988,13 @@ border-radius: 20px;
     justify-content: flex-end;
   }
 
-  /* line 975, ../sass/screen.scss */
+  /* line 983, ../sass/screen.scss */
   .contacto-controls > .controls > .form-control {
     display: inline;
     width: 60%;
   }
 }
-/* line 981, ../sass/screen.scss */
+/* line 989, ../sass/screen.scss */
 .sabias-slider {
   display: flex;
   flex-direction: column;
@@ -992,7 +1002,7 @@ border-radius: 20px;
   width: 100%;
 }
 
-/* line 990, ../sass/screen.scss */
+/* line 998, ../sass/screen.scss */
 .sabias-container {
   height: 300px;
   width: 350px;
@@ -1002,13 +1012,13 @@ border-radius: 20px;
   border-radius: 20px;
 }
 @media (min-width: 800px) {
-  /* line 990, ../sass/screen.scss */
+  /* line 998, ../sass/screen.scss */
   .sabias-container {
     width: 800px;
   }
 }
 
-/* line 1002, ../sass/screen.scss */
+/* line 1010, ../sass/screen.scss */
 .sabias-container-2 {
   height: 278px;
   width: 328px;
@@ -1019,20 +1029,20 @@ border-radius: 20px;
   margin: 10px;
 }
 @media (min-width: 800px) {
-  /* line 1002, ../sass/screen.scss */
+  /* line 1010, ../sass/screen.scss */
   .sabias-container-2 {
     width: 780px;
   }
 }
 
-/* line 1015, ../sass/screen.scss */
+/* line 1023, ../sass/screen.scss */
 .slider-indicator {
   display: flex;
   justify-content: center;
   width: 100%;
 }
 
-/* line 1021, ../sass/screen.scss */
+/* line 1029, ../sass/screen.scss */
 .slider_1, .slider_2, .slider_3, .slider_4, .slider_5 {
   border: 1px solid #333;
   border-radius: 10px;
@@ -1042,13 +1052,13 @@ border-radius: 20px;
   margin: 10px;
 }
 
-/* line 1030, ../sass/screen.scss */
+/* line 1038, ../sass/screen.scss */
 .slider_selected {
   background-color: #8CC63F;
   border: 1px solid #fff;
 }
 
-/* line 1037, ../sass/screen.scss */
+/* line 1045, ../sass/screen.scss */
 .footer {
   font-family: Arial, serif;
   font-size: 16px;
@@ -1060,7 +1070,7 @@ border-radius: 20px;
   height: 160px;
 }
 @media (min-width: 800px) {
-  /* line 1037, ../sass/screen.scss */
+  /* line 1045, ../sass/screen.scss */
   .footer {
     position: relative;
     bottom: 0;
@@ -1069,19 +1079,19 @@ border-radius: 20px;
   }
 }
 
-/* line 1055, ../sass/screen.scss */
+/* line 1063, ../sass/screen.scss */
 .footer > p {
   margin: 35px 50px;
   text-align: center;
 }
 @media (min-width: 800px) {
-  /* line 1055, ../sass/screen.scss */
+  /* line 1063, ../sass/screen.scss */
   .footer > p {
     margin: 10px 0;
   }
 }
 
-/* line 1063, ../sass/screen.scss */
+/* line 1071, ../sass/screen.scss */
 .footer > p > a {
   text-decoration: none;
   color: #ce5f2d;
@@ -1281,12 +1291,12 @@ label {
 }
 
 */
-/* line 1265, ../sass/screen.scss */
+/* line 1273, ../sass/screen.scss */
 #main-slider {
   height: 370px;
   position: relative;
 }
-/* line 1271, ../sass/screen.scss */
+/* line 1279, ../sass/screen.scss */
 #main-slider h1 {
   color: black;
   font-family: 'Droid Sans', sans-serif;
@@ -1296,7 +1306,7 @@ label {
   margin-bottom: 20px;
   margin-top: 20px;
 }
-/* line 1280, ../sass/screen.scss */
+/* line 1288, ../sass/screen.scss */
 #main-slider p {
   font-family: 'Droid Sans', sans-serif;
   font-size: 12px;
@@ -1304,19 +1314,19 @@ label {
   overflow: hidden;
 }
 @media (min-width: 800px) {
-  /* line 1280, ../sass/screen.scss */
+  /* line 1288, ../sass/screen.scss */
   #main-slider p {
     font-size: 16px;
   }
 }
-/* line 1290, ../sass/screen.scss */
+/* line 1298, ../sass/screen.scss */
 #main-slider img {
   max-height: 100%;
   max-width: 100%;
   vertical-align: middle;
   text-align: center;
 }
-/* line 1298, ../sass/screen.scss */
+/* line 1306, ../sass/screen.scss */
 #main-slider .button-ver {
   width: 54px;
   height: 32px;
@@ -1337,12 +1347,12 @@ label {
   -o-transition: all .3s;
   transition: all .3s;
 }
-/* line 1320, ../sass/screen.scss */
+/* line 1328, ../sass/screen.scss */
 #main-slider .button-ver:hover {
   cursor: pointer;
   background-color: orange;
 }
-/* line 1332, ../sass/screen.scss */
+/* line 1340, ../sass/screen.scss */
 #main-slider .main-slider-proyecto {
   opacity: 0;
   position: absolute;
@@ -1359,14 +1369,14 @@ label {
   transition: all 0.4s;
 }
 
-/* line 1356, ../sass/screen.scss */
+/* line 1364, ../sass/screen.scss */
 .show-slider-proyecto {
   opacity: 1 !important;
   z-index: 0;
   pointer-events: all !important;
 }
 
-/* line 1362, ../sass/screen.scss */
+/* line 1370, ../sass/screen.scss */
 button {
   border: none;
   background-color: transparent;
@@ -1374,12 +1384,12 @@ button {
   cursor: pointer;
 }
 
-/* line 1368, ../sass/screen.scss */
+/* line 1376, ../sass/screen.scss */
 button:hover {
   color: #ce5f2d;
 }
 
-/* line 1371, ../sass/screen.scss */
+/* line 1379, ../sass/screen.scss */
 .ac-mensaje-custom-show {
   background-color: #a1cca5;
   text-align: center;
@@ -1394,39 +1404,85 @@ button:hover {
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
 }
 
-/* line 1384, ../sass/screen.scss */
+/* line 1392, ../sass/screen.scss */
 #message-chat {
   height: 250px;
   overflow-y: auto;
   border-right: 1px solid;
 }
 
-/* line 1389, ../sass/screen.scss */
+/* line 1397, ../sass/screen.scss */
 .chat-container {
   flex-direction: column;
   display: flex;
-  width: 80%;
+  width: 100%;
+}
+@media (min-width: 800px) {
+  /* line 1397, ../sass/screen.scss */
+  .chat-container {
+    width: 80%;
+  }
 }
 
-/* line 1394, ../sass/screen.scss */
-.chat-container-login {
+/* line 1405, ../sass/screen.scss */
+.chat-container-login, .contacto-container-controls {
   flex-direction: row;
   display: flex;
 }
 
-/* line 1398, ../sass/screen.scss */
+/* line 1409, ../sass/screen.scss */
 .btn-chat {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
   margin-top: 30px;
   font-family: 'Oswald', sans-serif;
 }
+@media (min-width: 800px) {
+  /* line 1409, ../sass/screen.scss */
+  .btn-chat {
+    align-items: flex-end;
+  }
+}
 
-/* line 1406, ../sass/screen.scss */
+/* line 1420, ../sass/screen.scss */
 #texto-mensaje {
   width: 60%;
   margin-left: 25%;
   margin-top: 15px;
+}
+
+/* line 1425, ../sass/screen.scss */
+.arrow-contacto-margin {
+  margin-right: 0;
+}
+@media (min-width: 800px) {
+  /* line 1425, ../sass/screen.scss */
+  .arrow-contacto-margin {
+    margin-right: 10px;
+  }
+}
+
+/* line 1431, ../sass/screen.scss */
+.arrow-chat-margin {
+  margin-right: 0;
+}
+@media (min-width: 800px) {
+  /* line 1431, ../sass/screen.scss */
+  .arrow-chat-margin {
+    margin-right: 15px;
+  }
+}
+
+/* line 1437, ../sass/screen.scss */
+.controls-margin {
+  margin-top: 20px;
+}
+
+/* line 1440, ../sass/screen.scss */
+.error-message {
+  font-size: 11px;
+  color: red;
+  position: absolute;
 }
