--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1438,11 +1438,13 @@ button:hover{
   margin-top: 20px;
 }
 .error-message {
-  font-size: 11px;
-  color: red;
+  font-size: 12px;
   position: absolute;
-  //margin-left: 18%;
-  //margin-top: -15px;
+  color: #fff;
+  background-color: #f44336;
+  padding: 2px 15px;
+  border-radius: 3px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.16), 0 2px 10px rgba(0, 0, 0, 0.12);
 }
 
 
