--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -207,6 +207,11 @@ select option {
   }
 }
 
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+
 .menu-mobile {
   display: flex;
   height: 100%;
@@ -639,9 +644,18 @@ h1 {
   font-size: 40px;
   font-weight: bold;
   padding: 5px 0;
-  @media (min-width: 800px) {
+  opacity:0;  /* make things invisible upon start */
+  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+  -moz-animation:fadeIn ease-in 1;
+  animation:fadeIn ease-in 1;
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
+  -webkit-animation-duration:2s;
+  -moz-animation-duration:2s;
+  animation-duration:2s;
+  @media (min-width: 800px){
     font-size: 80px;
-  }
+}
 }
 
 h3 {
@@ -650,10 +664,20 @@ h3 {
   padding: 10px 0;
   color: darkgoldenrod;
   font-variant: all-small-caps;
+  opacity:0;  /* make things invisible upon start */
+  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+  -moz-animation:fadeIn ease-in 1;
+  animation:fadeIn ease-in 1;
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
+  -webkit-animation-duration:2s;
+  -moz-animation-duration:2s;
+  animation-duration:2s;
 }
 
 h5 {
-  font-size: 16px;
+  font-family: 'Oswald', sans-serif;
+  font-size: 24px;
   font-weight: bold;
 }
 
@@ -699,6 +723,15 @@ strong {
   font-family: 'Oswald', sans-serif;
   color: black;
   font-weight: 400;
+  opacity:0;  /* make things invisible upon start */
+  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+  -moz-animation:fadeIn ease-in 1;
+  animation:fadeIn ease-in 1;
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
+  -webkit-animation-duration:2.7s;
+  -moz-animation-duration:2.7s;
+  animation-duration:2.7s;
 
 
 }
@@ -804,7 +837,8 @@ strong {
   align-items: center;
   //margin-right: 15%;
   //margin-top: 30px;
-  margin: 20px 15% 20px 0;
+  margin: 10px 0 10px 0;
+  padding-bottom: 5px;
   //@media (min-width: 800px) {
   //  margin: 30px 15% 0 0;
   //}
@@ -826,6 +860,7 @@ strong {
   margin-left: 10px;
   text-decoration: none;
   color: $color_6;
+  font-family: 'Oswald', sans-serif;
 }
 
 .btn-action > a {
@@ -849,6 +884,15 @@ textarea {
   margin-left: 5px;
   //margin: 0 0 10px;
   //padding: 10px 5px 5px;
+  opacity:0;  /* make things invisible upon start */
+  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+  -moz-animation:fadeIn ease-in 1;
+  animation:fadeIn ease-in 1;
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
+  -webkit-animation-duration:3s;
+  -moz-animation-duration:3s;
+  animation-duration:3s;
 }
 
 label {
@@ -908,7 +952,6 @@ label {
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px;
-  background-color: lightgrey;
   text-align: center;
 }
 
@@ -930,12 +973,20 @@ label {
   margin: 0 15px;
 }
 
-.noticia-info > p, .show-noticia-info > p {
-  font-size: 12px;
+.show-noticia-info h3{
+  font-family: 'Oswald', sans-serif;
+  font-size: 36px;
 }
 
+.noticia-info > p,a, .show-noticia-info > p {
+  font-size: 16px;
+  font-family: 'Oswald', sans-serif;
+}
+
+
+
 .buscar {
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .buscar-control {
@@ -1278,7 +1329,7 @@ label {
 
   h1 {
     color: black;
-    font-family: 'Droid Sans', sans-serif;
+    font-family: 'Oswald', sans-serif;
     font-weight: bold;
     font-size: 30px;
     text-transform: uppercase;
@@ -1286,8 +1337,8 @@ label {
     margin-top: 20px;
   }
   p {
-    font-family: 'Droid Sans', sans-serif;
-    font-size: 12px;
+    font-family: 'Oswald', sans-serif;
+    font-size: 17px;
     margin-bottom: 20px;
     //max-height: 16px;
     overflow: hidden;
@@ -1306,7 +1357,7 @@ label {
   .button-ver {
     width: 54px;
     height: 32px;
-    font-family: 'Droid Sans', sans-serif;
+    font-family: 'Oswald', sans-serif;
     font-weight: bold;
     background-color: rgb(0, 161, 72);
     -webkit-border-radius: 8px;
