--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -3,7 +3,7 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 @import url(https://fonts.googleapis.com/css?family=Oswald:400,700,300);
-/* line 5, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -25,45 +25,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -958,14 +958,16 @@ border: 1px solid $color_6;
 -moz-border-radius: 20px;
 border-radius: 20px;
 */
+  height: 100px;
+  width: 100px;
 }
 
-/* line 944, ../sass/screen.scss */
+/* line 946, ../sass/screen.scss */
 .show-noticia-foto {
   margin: 30px 0 20px;
 }
 
-/* line 948, ../sass/screen.scss */
+/* line 950, ../sass/screen.scss */
 .noticia-foto > img {
   height: 100px;
   width: 100px;
@@ -976,7 +978,7 @@ border-radius: 20px;
   text-align: center;
 }
 
-/* line 958, ../sass/screen.scss */
+/* line 960, ../sass/screen.scss */
 .show-noticia-foto > img {
   height: 200px;
   width: 100%;
@@ -987,34 +989,34 @@ border-radius: 20px;
   text-align: center;
 }
 
-/* line 968, ../sass/screen.scss */
+/* line 970, ../sass/screen.scss */
 .noticia-info {
   margin-left: 20px;
 }
 
-/* line 972, ../sass/screen.scss */
+/* line 974, ../sass/screen.scss */
 .show-noticia-info {
   margin: 0 15px;
 }
 
-/* line 976, ../sass/screen.scss */
+/* line 978, ../sass/screen.scss */
 .show-noticia-info h3 {
   font-family: 'Oswald', sans-serif;
   font-size: 36px;
 }
 
-/* line 981, ../sass/screen.scss */
+/* line 983, ../sass/screen.scss */
 .noticia-info > p, a, .show-noticia-info > p {
   font-size: 16px;
   font-family: 'Oswald', sans-serif;
 }
 
-/* line 988, ../sass/screen.scss */
+/* line 990, ../sass/screen.scss */
 .buscar {
   margin-top: 10px;
 }
 
-/* line 992, ../sass/screen.scss */
+/* line 994, ../sass/screen.scss */
 .buscar-control {
   width: 89%;
   background-image: none;
@@ -1023,25 +1025,25 @@ border-radius: 20px;
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 
-/* line 1000, ../sass/screen.scss */
+/* line 1002, ../sass/screen.scss */
 .arrow-contacto {
   display: none;
 }
 
-/* line 1004, ../sass/screen.scss */
+/* line 1006, ../sass/screen.scss */
 .contacto-controls {
   width: 100%;
 }
 
 @media (min-width: 800px) {
-  /* line 1009, ../sass/screen.scss */
+  /* line 1011, ../sass/screen.scss */
   .contacto-container {
     flex-direction: column;
     display: flex;
     width: 80%;
   }
 
-  /* line 1015, ../sass/screen.scss */
+  /* line 1017, ../sass/screen.scss */
   .arrow-contacto {
     border-left: 1px solid #000;
     margin-right: 5%;
@@ -1050,14 +1052,14 @@ border-radius: 20px;
     margin-left: 10%;
   }
 
-  /* line 1022, ../sass/screen.scss */
+  /* line 1024, ../sass/screen.scss */
   .contacto-controls {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
   }
 
-  /* line 1028, ../sass/screen.scss */
+  /* line 1030, ../sass/screen.scss */
   .contacto-controls > .controls {
     width: 100%;
     display: flex;
@@ -1065,13 +1067,13 @@ border-radius: 20px;
     justify-content: flex-end;
   }
 
-  /* line 1034, ../sass/screen.scss */
+  /* line 1036, ../sass/screen.scss */
   .contacto-controls > .controls > .form-control {
     display: inline;
     width: 60%;
   }
 }
-/* line 1040, ../sass/screen.scss */
+/* line 1042, ../sass/screen.scss */
 .sabias-slider {
   display: flex;
   flex-direction: column;
@@ -1079,7 +1081,7 @@ border-radius: 20px;
   width: 100%;
 }
 
-/* line 1049, ../sass/screen.scss */
+/* line 1051, ../sass/screen.scss */
 .sabias-container {
   height: 300px;
   width: 350px;
@@ -1089,13 +1091,13 @@ border-radius: 20px;
   border-radius: 20px;
 }
 @media (min-width: 800px) {
-  /* line 1049, ../sass/screen.scss */
+  /* line 1051, ../sass/screen.scss */
   .sabias-container {
     width: 800px;
   }
 }
 
-/* line 1061, ../sass/screen.scss */
+/* line 1063, ../sass/screen.scss */
 .sabias-container-2 {
   height: 278px;
   width: 328px;
@@ -1106,20 +1108,20 @@ border-radius: 20px;
   margin: 10px;
 }
 @media (min-width: 800px) {
-  /* line 1061, ../sass/screen.scss */
+  /* line 1063, ../sass/screen.scss */
   .sabias-container-2 {
     width: 780px;
   }
 }
 
-/* line 1074, ../sass/screen.scss */
+/* line 1076, ../sass/screen.scss */
 .slider-indicator {
   display: flex;
   justify-content: center;
   width: 100%;
 }
 
-/* line 1080, ../sass/screen.scss */
+/* line 1082, ../sass/screen.scss */
 .slider_1, .slider_2, .slider_3, .slider_4, .slider_5 {
   border: 1px solid #333;
   border-radius: 10px;
@@ -1129,13 +1131,13 @@ border-radius: 20px;
   margin: 10px;
 }
 
-/* line 1089, ../sass/screen.scss */
+/* line 1091, ../sass/screen.scss */
 .slider_selected {
   background-color: #8CC63F;
   border: 1px solid #fff;
 }
 
-/* line 1096, ../sass/screen.scss */
+/* line 1098, ../sass/screen.scss */
 .footer {
   font-family: Arial, serif;
   font-size: 16px;
@@ -1147,7 +1149,7 @@ border-radius: 20px;
   height: 160px;
 }
 @media (min-width: 800px) {
-  /* line 1096, ../sass/screen.scss */
+  /* line 1098, ../sass/screen.scss */
   .footer {
     position: relative;
     bottom: 0;
@@ -1156,19 +1158,19 @@ border-radius: 20px;
   }
 }
 
-/* line 1114, ../sass/screen.scss */
+/* line 1116, ../sass/screen.scss */
 .footer > p {
   margin: 35px 50px;
   text-align: center;
 }
 @media (min-width: 800px) {
-  /* line 1114, ../sass/screen.scss */
+  /* line 1116, ../sass/screen.scss */
   .footer > p {
     margin: 10px 0;
   }
 }
 
-/* line 1122, ../sass/screen.scss */
+/* line 1124, ../sass/screen.scss */
 .footer > p > a {
   text-decoration: none;
   color: #ce5f2d;
@@ -1368,12 +1370,12 @@ label {
 }
 
 */
-/* line 1324, ../sass/screen.scss */
+/* line 1326, ../sass/screen.scss */
 #main-slider {
   height: 370px;
   position: relative;
 }
-/* line 1330, ../sass/screen.scss */
+/* line 1332, ../sass/screen.scss */
 #main-slider h1 {
   color: black;
   font-family: 'Oswald', sans-serif;
@@ -1383,27 +1385,25 @@ label {
   margin-bottom: 20px;
   margin-top: 20px;
 }
-/* line 1339, ../sass/screen.scss */
+/* line 1341, ../sass/screen.scss */
 #main-slider p {
   font-family: 'Oswald', sans-serif;
   font-size: 17px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   overflow: hidden;
 }
 @media (min-width: 800px) {
-  /* line 1339, ../sass/screen.scss */
+  /* line 1341, ../sass/screen.scss */
   #main-slider p {
     font-size: 16px;
   }
 }
-/* line 1349, ../sass/screen.scss */
+/* line 1352, ../sass/screen.scss */
 #main-slider img {
-  max-height: 100%;
-  max-width: 100%;
   vertical-align: middle;
   text-align: center;
 }
-/* line 1357, ../sass/screen.scss */
+/* line 1359, ../sass/screen.scss */
 #main-slider .button-ver {
   width: 54px;
   height: 32px;
@@ -1424,12 +1424,12 @@ label {
   -o-transition: all .3s;
   transition: all .3s;
 }
-/* line 1379, ../sass/screen.scss */
+/* line 1381, ../sass/screen.scss */
 #main-slider .button-ver:hover {
   cursor: pointer;
   background-color: orange;
 }
-/* line 1391, ../sass/screen.scss */
+/* line 1393, ../sass/screen.scss */
 #main-slider .main-slider-proyecto {
   opacity: 0;
   position: absolute;
@@ -1446,14 +1446,14 @@ label {
   transition: all 0.4s;
 }
 
-/* line 1415, ../sass/screen.scss */
+/* line 1417, ../sass/screen.scss */
 .show-slider-proyecto {
   opacity: 1 !important;
   z-index: 0;
   pointer-events: all !important;
 }
 
-/* line 1421, ../sass/screen.scss */
+/* line 1423, ../sass/screen.scss */
 button {
   border: none;
   background-color: transparent;
@@ -1461,12 +1461,12 @@ button {
   cursor: pointer;
 }
 
-/* line 1427, ../sass/screen.scss */
+/* line 1429, ../sass/screen.scss */
 button:hover {
   color: #ce5f2d;
 }
 
-/* line 1430, ../sass/screen.scss */
+/* line 1432, ../sass/screen.scss */
 .ac-mensaje-custom-show {
   background-color: #a1cca5;
   text-align: center;
@@ -1481,33 +1481,33 @@ button:hover {
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
 }
 
-/* line 1443, ../sass/screen.scss */
+/* line 1445, ../sass/screen.scss */
 #message-chat {
   height: 250px;
   overflow-y: auto;
   border-right: 1px solid;
 }
 
-/* line 1448, ../sass/screen.scss */
+/* line 1450, ../sass/screen.scss */
 .chat-container {
   flex-direction: column;
   display: flex;
   width: 100%;
 }
 @media (min-width: 800px) {
-  /* line 1448, ../sass/screen.scss */
+  /* line 1450, ../sass/screen.scss */
   .chat-container {
     width: 80%;
   }
 }
 
-/* line 1456, ../sass/screen.scss */
+/* line 1458, ../sass/screen.scss */
 .chat-container-login, .contacto-container-controls {
   flex-direction: row;
   display: flex;
 }
 
-/* line 1460, ../sass/screen.scss */
+/* line 1462, ../sass/screen.scss */
 .btn-chat {
   display: flex;
   flex-direction: column;
@@ -1517,47 +1517,47 @@ button:hover {
   font-family: 'Oswald', sans-serif;
 }
 @media (min-width: 800px) {
-  /* line 1460, ../sass/screen.scss */
+  /* line 1462, ../sass/screen.scss */
   .btn-chat {
     align-items: flex-end;
   }
 }
 
-/* line 1471, ../sass/screen.scss */
+/* line 1473, ../sass/screen.scss */
 #texto-mensaje {
   width: 60%;
   margin-left: 25%;
   margin-top: 15px;
 }
 
-/* line 1476, ../sass/screen.scss */
+/* line 1478, ../sass/screen.scss */
 .arrow-contacto-margin {
   margin-right: 0;
 }
 @media (min-width: 800px) {
-  /* line 1476, ../sass/screen.scss */
+  /* line 1478, ../sass/screen.scss */
   .arrow-contacto-margin {
     margin-right: 10px;
   }
 }
 
-/* line 1482, ../sass/screen.scss */
+/* line 1484, ../sass/screen.scss */
 .arrow-chat-margin {
   margin-right: 0;
 }
 @media (min-width: 800px) {
-  /* line 1482, ../sass/screen.scss */
+  /* line 1484, ../sass/screen.scss */
   .arrow-chat-margin {
     margin-right: 15px;
   }
 }
 
-/* line 1488, ../sass/screen.scss */
+/* line 1490, ../sass/screen.scss */
 .controls-margin {
   margin-top: 20px;
 }
 
-/* line 1491, ../sass/screen.scss */
+/* line 1493, ../sass/screen.scss */
 .error-message {
   font-size: 12px;
   position: absolute;
